# ftg

./: Cargo.toml  config.yaml
ftg/: Cargo.toml
ftg-macros/: Cargo.toml
ftg-macros/src/: expand.rs  lib.rs
ftg/src/: cli_args.rs  client.rs  config.rs  config.yaml  error.rs  main.rs  server.rs
ftg/src/editor/: color_scheme.rs  command.rs  editor.rs  keymap.rs  mod.rs  render.rs  terminal.rs  window.rs
ftg/src/editor/buffer/: buffer.rs  search.rs
ftg/src/editor/selection/: mod.rs  region.rs  selection.rs  set.rs
ftg/src/editor/view/: header.rs  mod.rs  search.rs  view.rs
ftg/src/editor/window/: mod.rs  project.rs  window.rs
ftg/src/utils/: any.rs  bytes.rs  container.rs  mod.rs  path.rs  position.rs  web_socket_upgraded.rs
src/: cli.rs  cli_args.rs  client.rs  config.rs  config.yaml  error.rs  main.rs  server.rs
src/editor/: buffer.rs  client_state.rs  editor.rs  keymap.rs  mod.rs  search.rs  terminal.rs  view.rs  window.rs
src/editor/buffer/: buffer.rs  mod.rs  search.rs
src/editor/selection/: mod.rs  region.rs  selection.rs  set.rs
src/editor/view/: search.rs  view.rs
src/utils/: any.rs  bytes.rs  container.rs  lock.rs  macros.rs  mod.rs
